youfull/objects/Geo_Level_3__c.object
<CustomObject>
    <fields>
        <fullName>Geo_Level_2__c</fullName>
        <label>Geo Level 2</label>
        <referenceTo>Geo_Level_2__c</referenceTo>
        <relationshipLabel>Geo Level 3</relationshipLabel>
        <relationshipName>Geo_Level_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geo_Level_3_Key__c</fullName>
        <externalId>true</externalId>
        <label>Geo Level 3 Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geo Level 3</label>
    <nameField>
        <label>Geo Level 3 Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Lead_00NF0000008gzQ1MAI</fullName>
        <active>true</active>
        <field>Lead.Geo_Level_3__c</field>
        <filterItems>
            <field>$Source.Geo_Level_2__c</field>
            <operation>equals</operation>
            <valueField>Geo_Level_3__c.Geo_Level_2__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_City</name>
        <sourceObject>Lead</sourceObject>
    </namedFilters>
    <pluralLabel>Geo Level 3</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>